Add JDK25 Support (#132)