@@ -2,11 +2,11 @@ plugins {
     id 'java'
     id 'idea'
     id 'application'
-    id 'com.github.ben-manes.versions' version '0.52.0'
+    id 'com.github.ben-manes.versions' version '0.53.0'
     id 'net.nemerosa.versioning' version '3.1.0'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id 'org.gradlex.extra-java-module-info' version '1.12'
-    id 'org.beryx.jlink' version '3.1.1'
+    id 'org.gradlex.extra-java-module-info' version '1.13.1'
+    id 'org.beryx.jlink' version '3.1.4-rc'
 }
 
 ext {
@@ -16,8 +16,8 @@ ext {
     moduleName = 'edu.jhuapl.trinity'
     mainClassPath = 'edu.jhuapl.trinity.App'
     mainClassJarLauncher = 'edu.jhuapl.trinity.TrinityMain'
-    isProdJar = findProperty('env') == 'prod-jar'
-    isProdJlink = findProperty('env') == 'prod-jlink'
+    isReleaseJar = findProperty('env') == 'release-jar'
+    isReleaseJlink = findProperty('env') == 'release-jlink'
     isDevelopment = findProperty('env') == 'dev'
     fxVersion = findProperty('javafx.version')
     fxStaticVersion = findProperty('javafx.static.version')
@@ -40,41 +40,41 @@ println "OS Detected: ${org.gradle.internal.os.OperatingSystem.current()}"
 
 repositories {
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+    maven { url = 'https://jitpack.io' }
 }
 
 
 dependencies {
     // Excluding openjfx from 3rd party modules.
-    implementation(group: 'com.github.birdasaur.litfx', name: 'litfx-controls', version: '0.1.3') {
+    implementation('com.github.birdasaur.litfx:litfx-controls:0.1.3') {
         exclude group: 'org.openjfx'
     }
-    implementation(group: 'org.fxyz3d', name: 'fxyz3d', version: '0.6.0') {
+    implementation('org.fxyz3d:fxyz3d:0.6.0') {
         exclude group: 'org.openjfx'
     }
-    implementation(group: 'eu.hansolo.fx', name: 'charts', version: '21.0.25') {
+    implementation('eu.hansolo.fx:charts:21.0.27') {
         exclude group: 'org.openjfx'
         exclude group: 'ch.qos.logback'
     }
-    implementation group: 'com.github.quickhull3d', name: 'quickhull3d', version: '1.0.0'
-    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
-    implementation group: 'org.zeromq', name: 'jeromq', version: '0.6.0'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.19.1'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.19.1'
-    implementation group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.12'
-    implementation group: 'org.jflac', name: 'jflac-codec', version: '1.5.2'
-    implementation group: 'com.tambapps.fft4j', name: 'fft4j', version: '2.0'
-    implementation group: 'com.github.trinity-xai', name: 'SuperMDS', version: 'v2025.06.29'
-    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.5'
+    implementation 'com.github.quickhull3d:quickhull3d:1.0.0'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'org.apache.commons:commons-lang3:3.19.0'
+    implementation 'org.zeromq:jeromq:0.6.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.19.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.2'
+    implementation 'com.github.sarxos:webcam-capture:0.3.12'
+    implementation 'org.jflac:jflac-codec:1.5.2'
+    implementation 'com.tambapps.fft4j:fft4j:2.0'
+    implementation 'com.github.trinity-xai:SuperMDS:v2025.06.29'
+    implementation 'org.apache.pdfbox:pdfbox:3.0.6'
 
     // Enforce slf4j-api version across dependencies
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.17'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.18'
+    implementation 'org.slf4j:slf4j-api:2.0.17'
+    implementation 'ch.qos.logback:logback-classic:1.5.20'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.2'
-    testImplementation 'org.junit.platform:junit-platform-suite:1.13.2'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.15.0'
+    testImplementation 'org.junit.platform:junit-platform-suite:1.14.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.0'
 }
 
 // Make sure every single dependency is modularized.
@@ -173,7 +173,7 @@ idea {
 }
 
 tasks.named('wrapper', Wrapper) {
-    gradleVersion = '8.14.2'
+    gradleVersion = '9.1.0'
     distributionType = Wrapper.DistributionType.BIN
 }
 
@@ -189,10 +189,10 @@ application {
 }
 
 java {
-//    sourceCompatibility = JavaVersion.VERSION_21 // Use this instead of  toolchain.* if you want to manually setup your own JDK
-//    targetCompatibility = JavaVersion.VERSION_21 // Use this instead of  toolchain.* if you want to manually setup your own JDK
-    toolchain.languageVersion = JavaLanguageVersion.of(21)
-    toolchain.vendor = JvmVendorSpec.ADOPTIUM
+//    sourceCompatibility = JavaVersion.VERSION_25 // Use this instead of  toolchain.* if you want to manually setup your own JDK
+//    targetCompatibility = JavaVersion.VERSION_25 // Use this instead of  toolchain.* if you want to manually setup your own JDK
+    toolchain.languageVersion = JavaLanguageVersion.of(25)
+//    toolchain.vendor = JvmVendorSpec.ADOPTIUM
     modularity.inferModulePath.set(true)
 }
 
@@ -206,7 +206,10 @@ compileJava {
 // List of Prism Settings
 // https://github.com/openjdk/jfx/blob/master/modules/javafx.graphics/src/main/java/com/sun/prism/impl/PrismSettings.java
 run {
-    jvmArgs += ['-Dprism.maxvram=2G', '-Djavafx.animation.fullspeed=true']
+    jvmArgs '-Dprism.maxvram=2G'
+    jvmArgs '-Djavafx.animation.fullspeed=true'
+    jvmArgs '--enable-native-access=javafx.graphics'
+    jvmArgs '--enable-native-access=javafx.media'
 }
 
 tasks.named('test', Test) {
@@ -253,7 +256,7 @@ processResources {
     // Configure Default Logging Path (only applies when logback is enabled)
     def logPath = "${artifactName}.log" // Note: if you update this make sure to verify/update fileNamePattern below as well
     // Log to Console.App on OSX
-    if (isProdJlink && org.gradle.internal.os.OperatingSystem.current().macOsX) {
+    if (isReleaseJlink && org.gradle.internal.os.OperatingSystem.current().macOsX) {
         logPath = '${user.home}/Library/Logs/' + logPath
     }
     def logbackProps = [
@@ -345,9 +348,9 @@ tasks.register('fxUberJar', Jar) {
     }
 }
 
-artifacts {
-    archives noFxUberJar
-    archives fxUberJar
+assemble {
+    dependsOn(noFxUberJar)
+    dependsOn(fxUberJar)
 }
 
 // </editor-fold>
@@ -363,11 +366,18 @@ jlink {
     options.set(['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'])
     imageZip.set(imageZipFile)
     launcher {
+        def currentOS = org.gradle.internal.os.OperatingSystem.current()
         name = artifactNameUpper
         mainClass = mainClassPath
+        noConsole = true // uses javaw instead of java on windows
         jvmArgs = ['-Dprism.maxvram=2G', '-Djavafx.animation.fullspeed=true']
         jvmArgs += ["-Dlogback.configurationFile={{BIN_DIR}}${fileSep}logback.xml"]
-        jvmArgs += ["-Dtrinity.app.dir={{BIN_DIR}}"]
+        if (currentOS.windows) {
+            jvmArgs += ["-Dtrinity.app.dir={{BIN_DIR}}${fileSep}"] // extra fileSep on jlink to ensure .bat file %~dp0 escaping works
+        } else {
+            jvmArgs += ["-Dtrinity.app.dir={{BIN_DIR}}"]
+        }
+        jvmArgs += ['--enable-native-access=javafx.graphics', '--enable-native-access=javafx.media']
         //jvmArgs += ["--add-exports external.module.name/external.package.name=$sModuleName", ...]
     }
     //forceMerge('javafx')
@@ -381,6 +391,7 @@ jlink {
         jvmArgs = ['-Dprism.maxvram=2G', '-Djavafx.animation.fullspeed=true']
         jvmArgs += ["-Dlogback.configurationFile=\$APPDIR${fileSep}logback.xml"]
         jvmArgs += ["-Dtrinity.app.dir=\$APPDIR"]
+        jvmArgs += ['--enable-native-access=javafx.graphics', '--enable-native-access=javafx.media']
         jvmArgs += ['--module-path', '.']
         if (currentOS.windows) {
             skipInstaller = true
